Новый компилятор/CocoR/Sample/S.atg
COMPILER Sample

	public string St ="";

CHARACTERS 
	letter = "ABCDEFGHIGKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz".
	digit = "0123456789".
	
TOKENS
	Identifier = letter {letter | digit}.
	Number = digit {digit}.
	Plus = "+".
	Minus = "-".

COMMENTS FROM "{" TO "}"
IGNORE '\r' + '\n' + '\t'

PRODUCTIONS 
	Sample = Expr.
	Expr = Number (. St=St + t.val; .)
	| Expr Plus (. St=St + "+"; .) Expr 
	| Expr Minus (. St=St + "-"; .) Expr.  

END Sample.
